<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>door_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2970435845@qq.com">nuc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <depend>rosidl_default_generators</depend>
  <build_depend>door_interface</build_depend>
  <exec_depend>door_interface</exec_depend>
  <depend>unitree_go</depend>
  <depend>unitree_hg</depend>
  <depend>unitree_api</depend>
  <depend>rosbag2_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
